@startuml BucketListManager Class Diagram

class User {
  +UUID id
  +String email
  +String name
  +DateTime createdAt
}

class BucketListItem {
  +UUID id
  +UUID userId
  +String title
  +String description
  +String category
  +String priority
  +String inspirationSource
  +String whyImportant
  +String idealTiming
  +String[] shareWith
  +String status
  +DateTime completionDate
  +Integer satisfactionRating
  +DateTime createdAt
  --
  +markCompleted()
  +changePriority()
  +moveToPlanning()
}

class Category {
  +UUID id
  +String name
  +String description
  +String icon
  +DateTime createdAt
}

class ActionStep {
  +UUID id
  +UUID itemId
  +String description
  +DateTime timeline
  +UUID[] dependencies
  +Boolean completed
  --
  +markComplete()
}

class Progress {
  +UUID id
  +UUID itemId
  +Integer percentage
  +String milestoneReached
  +String notes
  +DateTime timestamp
  --
  +calculate()
}

class Obstacle {
  +UUID id
  +UUID itemId
  +String description
  +String severity
  +String[] potentialSolutions
  +Boolean resolved
  +String resolutionMethod
  +String lessonsLearned
  --
  +resolve()
}

class Experience {
  +UUID id
  +UUID itemId
  +DateTime date
  +String location
  +String[] companions
  +String story
  +String[] photoUrls
  +String reflection
  +Integer rating
}

class VisionBoard {
  +UUID id
  +UUID userId
  +UUID[] itemIds
  +String layout
  +String[] images
  +DateTime createdAt
}

class Milestone {
  +UUID id
  +UUID itemId
  +String description
  +DateTime achievedAt
}

User "1" -- "0..*" BucketListItem : creates
User "1" -- "0..*" VisionBoard : designs
BucketListItem "*" -- "1" Category : belongs to
BucketListItem "1" -- "0..*" ActionStep : has
BucketListItem "1" -- "0..*" Progress : tracks
BucketListItem "1" -- "0..*" Obstacle : encounters
BucketListItem "1" -- "0..1" Experience : documents
BucketListItem "1" -- "0..*" Milestone : achieves

@enduml
